// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectWithTags Display tests should match snapshot 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="component"
    role="combobox"
    tabindex="-1"
  >
    <div
      class="component xl"
    >
      <div
        class="component component xl xl block hasRightAddons"
      >
        <div
          class="field inner inner inner inner"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <div
                class="contentWrapper"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-:r0:-menu"
                  aria-labelledby="downshift-:r0:-label"
                  autocomplete="off"
                  class="input"
                  id="downshift-:r0:-input"
                  tabindex="0"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="addons rightAddons addons addons-size-xl"
          >
            <svg
              class="arrow"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectWithTags Display tests should match snapshot with selected tags 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="component"
    role="combobox"
    tabindex="-1"
  >
    <div
      class="component xl"
    >
      <div
        class="component component xl xl block hasRightAddons"
      >
        <div
          class="field inner inner inner inner filled"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <div
                class="contentWrapper hasTags"
              >
                <button
                  class="component component component xxs xxs outlined outlined checked rectangular outlined tag"
                  type="button"
                >
                  <span>
                    <span
                      class="tagContentWrap cursorPointer"
                    >
                      H
                      <span
                        class="tagCross"
                      >
                        <svg
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 24 24"
                          width="16"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm-4-7.5l2.586-2.5L8 9.5 9.5 8l2.5 2.586L14.5 8 16 9.5 13.414 12 16 14.5 14.5 16 12 13.414 9.5 16 8 14.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </button>
                <button
                  class="component component component xxs xxs outlined outlined checked rectangular outlined tag"
                  type="button"
                >
                  <span>
                    <span
                      class="tagContentWrap cursorPointer"
                    >
                      Li
                      <span
                        class="tagCross"
                      >
                        <svg
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 24 24"
                          width="16"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm-4-7.5l2.586-2.5L8 9.5 9.5 8l2.5 2.586L14.5 8 16 9.5 13.414 12 16 14.5 14.5 16 12 13.414 9.5 16 8 14.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </button>
                <button
                  class="component component component xxs xxs outlined outlined checked rectangular outlined tag"
                  type="button"
                >
                  <span>
                    <span
                      class="tagContentWrap cursorPointer"
                    >
                      Na
                      <span
                        class="tagCross"
                      >
                        <svg
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 24 24"
                          width="16"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm-4-7.5l2.586-2.5L8 9.5 9.5 8l2.5 2.586L14.5 8 16 9.5 13.414 12 16 14.5 14.5 16 12 13.414 9.5 16 8 14.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </button>
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-:r1:-menu"
                  aria-labelledby="downshift-:r1:-label"
                  autocomplete="off"
                  class="input hidden"
                  id="downshift-:r1:-input"
                  placeholder=""
                  tabindex="0"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="addons rightAddons addons addons-size-xl"
          >
            <svg
              class="arrow"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
